--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.6.0",
     "clsx": "^2.1.1",
+    "dompurify": "^3.2.6",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.5.0",
     "jsonwebtoken": "^9.0.2",
