--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "sharp": "^0.33.5",
     "swiper": "^11.1.9",
     "tailwind-merge": "^2.5.2",
+    "tailwind-scrollbar": "^4.0.2",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^4.5.7"
   },
