--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@tabler/icons-react": "^3.31.0",
+    "@vercel/analytics": "^1.5.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.12.2",
     "bcryptjs": "^2.4.3",
